Se realiza una correción ortográfica en el texto main_texto_sobremi

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                 <img class="main__img_fotoPerfil" src="../src/img/Perfil.png" alt="">
                 
                 <p class="main__texto_sobremi">
-                    Mi nombre Es Esteban Vásquez y soy web developer apasionado por la tecnología, llevo mas de 15 años dedicado al áreea de TI donde he estado en varios campos, me gusta estar en constante aprendizaje, lo que más me apasiona con el desarrollo web es crear aplicaciones que ayuden a agilizar procesos y puedan ser acesibles desde cualquier lugar del mundo
+                    Mi nombre Es Esteban Vásquez y soy web developer apasionado por la tecnología, llevo mas de 15 años dedicado al área de TI donde he estado en varios campos, me gusta estar en constante aprendizaje, lo que más me apasiona con el desarrollo web es crear aplicaciones que ayuden a agilizar procesos y puedan ser acesibles desde cualquier lugar del mundo
                 </p>
                 <div class="main__datos_personal">
                     <div class="datospersonal__item1 items">
